--- a/grs_client/src/main/resources/application.properties
+++ b/grs_client/src/main/resources/application.properties
@@ -3,3 +3,6 @@ server.port=8081
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 app.base.url=http://localhost
+
+spring.thymeleaf.mode=LEGACYHTML5
+spring.thymeleaf.cache=false
