--- a/grs_client/build.gradle
+++ b/grs_client/build.gradle
@@ -37,9 +37,10 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
-    implementation 'org.springframework.boot:spring-boot-starter-web'
-    providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter:5.8.1'
+    compile("org.springframework.boot:spring-boot-starter-thymeleaf")
+    compile('net.sourceforge.nekohtml:nekohtml:1.9.21')
+    compile("org.springframework.boot:spring-boot-starter-web")
+    compile('org.apache.tomcat.embed:tomcat-embed-jasper')
+    compileOnly('org.projectlombok:lombok')
+    compileOnly("org.springframework.boot:spring-boot-devtools")
 }
