--- a/grs_client/build.gradle
+++ b/grs_client/build.gradle
@@ -51,4 +51,5 @@ dependencies {
     compile files('libs/jackson-core-2.11.0.jar')
     compile files('libs/java-jwt-3.16.0.jar')
     compile("org.json:json:20171018")
+    runtime('mysql:mysql-connector-java')
 }
