--- a/grs_client/src/main/resources/application.properties
+++ b/grs_client/src/main/resources/application.properties
@@ -6,3 +6,13 @@ app.base.url=http://localhost
 
 spring.thymeleaf.mode=LEGACYHTML5
 spring.thymeleaf.cache=false
+
+#database configurations
+spring.datasource.url=jdbc:mysql://localhost:3306/grs_only_3?useLegacyDatetimeCode=false&useEncoding=true&useSSL=false&characterEncoding=UTF-8&serverTime=Asia/Dhaka&serverTimezone=Asia/Dhaka&zeroDateTimeBehavior=convertToNull&autoReconnect=true&failOverReadOnly=false
+spring.datasource.username=root
+spring.datasource.password=Abc@1234.
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
+spring.datasource.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.jdbc.time_zone=Asia/Dhaka
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=false
