--- a/grs_client/build.gradle
+++ b/grs_client/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
     compile("org.springframework.boot:spring-boot-starter-thymeleaf")
     compile('org.springframework.boot:spring-boot-starter-security')
+    compile('org.springframework.boot:spring-boot-starter-mail')
     compile('net.sourceforge.nekohtml:nekohtml:1.9.21')
     compile("org.springframework.boot:spring-boot-starter-web")
     compile('org.apache.tomcat.embed:tomcat-embed-jasper')
@@ -52,4 +53,5 @@ dependencies {
     compile files('libs/java-jwt-3.16.0.jar')
     compile("org.json:json:20171018")
     runtime('mysql:mysql-connector-java')
+    implementation project(":grs_server")
 }
