--- a/grs_server/build.gradle
+++ b/grs_server/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
     compile('org.springframework.boot:spring-boot-starter-security')
     compile("org.springframework.boot:spring-boot-starter-thymeleaf")
+//    compile("org.springframework.boot:spring-boot-starter-mail")
     compile("org.springframework.boot:spring-boot-starter-mail")
     compile('net.sourceforge.nekohtml:nekohtml:1.9.21')
     compile('io.jsonwebtoken:jjwt:0.7.0')
