created service endpoints for OfficesGroService, CitizenCharterService, SafetyNetProgramService

--- a/grs_client/src/main/resources/application.properties
+++ b/grs_client/src/main/resources/application.properties
@@ -16,3 +16,11 @@ spring.datasource.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.jdbc.time_zone=Asia/Dhaka
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
+
+settings.maximum-file-size=10485760
+settings.allowed-file-types=jpg,png,pdf,docx
+settings.file-size-label=Maximum file size allowed: 10 MB
+settings.file-types-label=Allowed file types: JPG, PNG, PDF, DOCX
+
+service.gov.bd.calendar.url=http://api.training.mygov.bd/calendar
+service.gov.bd.secret.key=AEC759B2196510EBAE2FF3B768B06C03
