--- a/grs_server/src/main/resources/application-dev.properties
+++ b/grs_server/src/main/resources/application-dev.properties
@@ -15,7 +15,7 @@ spring.thymeleaf.cache=false
 #database configurations
 spring.datasource.url=jdbc:mysql://localhost:3306/grs_only_3?useLegacyDatetimeCode=false&useEncoding=true&useSSL=false&characterEncoding=UTF-8&serverTime=Asia/Dhaka&serverTimezone=Asia/Dhaka&zeroDateTimeBehavior=convertToNull&autoReconnect=true&failOverReadOnly=false
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=Abc@1234.
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.jdbc.time_zone=Asia/Dhaka
@@ -25,7 +25,7 @@ spring.jpa.properties.hibernate.format_sql=false
 #spring.datasource.secondary.url=jdbc:mysql://192.168.10.167:3306/ekSheba_govt?useLegacyDatetimeCode=false&useEncoding=true&useSSL=false&characterEncoding=UTF-8&serverTime=Asia/Dhaka&zeroDateTimeBehavior=convertToNull&autoReconnect=true&failOverReadOnly=false
 spring.datasource.secondary.url=jdbc:mysql://localhost:3306/grs_doptor?useLegacyDatetimeCode=false&useEncoding=true&useSSL=false&characterEncoding=UTF-8&serverTime=Asia/Dhaka&serverTimezone=Asia/Dhaka&zeroDateTimeBehavior=convertToNull&autoReconnect=true&failOverReadOnly=false
 spring.datasource.secondary.username=root
-spring.datasource.secondary.password=root
+spring.datasource.secondary.password=Abc@1234.
 spring.datasource.secondary.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.secondary.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.datasource.secondary.jpa.show-sql=false
