Fix for Deployment

--- a/grs_client/build.gradle
+++ b/grs_client/build.gradle
@@ -23,7 +23,7 @@ repositories {
 }
 
 war {
-    archiveName 'portal.war'
+    archiveName 'grs_client.war'
 }
 configurations {
     developmentOnly
