--- a/grs_server/src/main/resources/application-dev.properties
+++ b/grs_server/src/main/resources/application-dev.properties
@@ -1,5 +1,6 @@
 #server configuration
 server.port=80
+server.servlet.contextPath=/grs_server
 server.address=0.0.0.0
 server.tomcat.max-threads=200
 
