--- a/grs_client/src/main/resources/application.properties
+++ b/grs_client/src/main/resources/application.properties
@@ -24,3 +24,8 @@ settings.file-types-label=Allowed file types: JPG, PNG, PDF, DOCX
 
 service.gov.bd.calendar.url=http://api.training.mygov.bd/calendar
 service.gov.bd.secret.key=AEC759B2196510EBAE2FF3B768B06C03
+
+
+api.service.protocol=http
+api.service.host=localhost
+api.service.port=8088
