--- a/grs_client/build.gradle
+++ b/grs_client/build.gradle
@@ -44,6 +44,8 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-mail')
     compile('net.sourceforge.nekohtml:nekohtml:1.9.21')
     compile("org.springframework.boot:spring-boot-starter-web")
+    compile("io.springfox:springfox-swagger2:2.8.0")
+    compile("io.springfox:springfox-swagger-ui:2.8.0")
     compile('org.apache.tomcat.embed:tomcat-embed-jasper')
     compileOnly('org.projectlombok:lombok')
     compileOnly("org.springframework.boot:spring-boot-devtools")
