--- a/grs_client/build.gradle
+++ b/grs_client/build.gradle
@@ -48,7 +48,7 @@ dependencies {
     compile("io.springfox:springfox-swagger-ui:2.8.0")
     compile('org.apache.tomcat.embed:tomcat-embed-jasper')
     compileOnly('org.projectlombok:lombok')
-    compileOnly("org.springframework.boot:spring-boot-devtools")
+//    compileOnly("org.springframework.boot:spring-boot-devtools")
     compile('io.jsonwebtoken:jjwt:0.7.0')
     compile files('libs/jackson-annotations-2.11.0.jar')
     compile files('libs/jackson-core-2.11.0.jar')
