--- a/grs_client/src/main/resources/application-dev.yml
+++ b/grs_client/src/main/resources/application-dev.yml
@@ -28,14 +28,6 @@ spring:
           time_zone: Asia/Dhaka
         format_sql: false
     show-sql: false
-
-#database configurations
-
-settings:
-  maximum-file-size: 10485760
-  allowed-file-types: jpg,png,pdf,docx
-  file-size-label: "Maximum file size allowed: 10 MB"
-  file-types-label: "Allowed file types: JPG, PNG, PDF, DOCX"
     
 service:
   gov:
@@ -53,3 +45,9 @@ api:
     protocol: http
     host: localhost
     port: 8088
+
+google:
+  recaptcha:
+    key:
+      site: 6LfZiGoqAAAAAK-Jf40d5MVeieg7ljS3bpVw-mHL
+      secret: 6LfZiGoqAAAAAKuuw3KyGhn2Jg5IvuKtj7fVAiob
