--- a/grs_client/src/main/resources/application-prod.yml
+++ b/grs_client/src/main/resources/application-prod.yml
@@ -28,13 +28,10 @@ spring:
         format_sql: false
     show-sql: false
 
-#database configurations
-
-settings:
-  maximum-file-size: 10485760
-  allowed-file-types: jpg,png,pdf,docx
-  file-size-label: "Maximum file size allowed: 10 MB"
-  file-types-label: "Allowed file types: JPG, PNG, PDF, DOCX"
+  http:
+    multipart:
+      max-file-size: 5000MB
+      max-request-size: 5000MB
 
 service:
   gov:
